Refactor download handling and improve error messaging
- Updated MainWindow to display total download size using a new method.
- Enhanced error messages in NetworkOptionsPane for better clarity.
- Refactored NewDownloadDialog to streamline download submission and handle submission states more effectively.
- Improved NewMediaDialog to manage metadata fetching and submission states, ensuring better user feedback.
- Revised NewWebsiteDialog to enhance submission handling and user notifications.
- Updated SettingsDialog to clarify antivirus command usage in the UI.
- Added tests for dialog submissions and download formats to ensure robustness.
- Removed obsolete antivirus options from packaging files and documentation.
- Introduced a verification script for package artifacts to ensure integrity and correctness.